WCAG fix - module-button has not sufficient  contrast ratio with background

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,7 +48,7 @@
 }
 
 .module-button {
-    background-color: #E4C1AE;
+    background-color: #824220;
     border-radius: 5rem;
     border: none;
     color: white;
@@ -61,8 +61,8 @@
 }
 
 .module-button:hover {
-    background-color: #C4A38E;
     cursor: pointer;
+    background-color: #6B3319;
 }
 
 @font-face {
